# lan-share

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  baslat.bat  benchmark.py  build.bat  test_ws.py  vcpkg.json
assets/: app.rc
src/: client.cpp  client.hpp  gui_app.cpp  gui_app.hpp  main.cpp  page_template.h  server.cpp  server.hpp  util.hpp  ws_client.hpp
